# waid

./: .gitignore  .goreleaser.yml  LICENSE  Makefile  README.md  go.mod  go.sum  waid.yaml.example
.github/workflows/: ci.yml  release.yml
cmd/waid/: main.go
deploy/docker/: Dockerfile  Dockerfile.goreleaser  docker-compose.yml
docs/: openapi.yaml
docs/adr/: 001-identity-resolution.md
internal/adapter/: adapter.go  adapter_test.go  evolution.go  generic.go  meta.go  waha.go
internal/api/: handlers.go  import.go  inbound.go  middleware.go  response.go  server.go
internal/config/: config.go
internal/model/: contact.go  events.go
internal/nats/: nats.go  nats_test.go  testhelper_test.go
internal/notifier/: hmac.go  hmac_test.go  notifier.go  notifier_test.go  postgres_webhook_store.go  webhook_store.go  webhook_store_test.go
internal/resolver/: resolver.go  resolver_test.go
internal/store/: factory.go  migrate.go  postgres.go  sqlite.go  sqlite_test.go  store.go  timeutil.go
migrations/: 000001_create_contacts.up.sql  000002_create_webhook_targets.down.sql  000002_create_webhook_targets.up.sql  000003_add_whatsapp_id.down.sql  000003_add_whatsapp_id.up.sql  migrations.go
pkg/bsuid/: bsuid.go  bsuid_test.go
pkg/phone/: normalize.go  normalize_test.go
sdk/go/: README.md  client.go  client_test.go  errors.go  go.mod  types.go
sdk/python/: README.md  pyproject.toml
sdk/python/src/waid/: __init__.py  client.py  errors.py  models.py
sdk/python/tests/: test_client.py
sdk/typescript/: README.md  package.json  tsconfig.json
(+4 files in other folders)
