[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waid-sdk"
version = "0.1.0"
description = "Python SDK for WAID — WhatsApp Identity Resolver"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/waid"]
